characters are no longer cut off on small screens

--- a/characters.css
+++ b/characters.css
@@ -5,14 +5,18 @@
     --grid-rows: 1;
     
     transform: scale(0.5, 0.5);
+    transform-origin: top;
     width: 50%;
 }
   
 .container {
-    display: grid;
+    /* display: grid;
     grid-gap: 1em;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr); */
+    width: 150vw;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .grid-item {
@@ -132,7 +136,8 @@ html {
  /* The sidebar menu */
  .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 160px; /* Set the width of the sidebar */
+    /* width: 160px; Set the width of the sidebar */
+    width: 10vw;
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
